--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <a class="nav-link" href="#games">GAMES</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#demo">VIDEO</a>
+                <a class="nav-link" href="#video">SNEAK PEEK</a>
               </li>
           </ul>
         </div>
@@ -31,16 +31,15 @@
     <section class="landing">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-5">
+                <div class="col-md-9">
                     <h1 class="display purple-mask">Timbre Exploration <br/>Mobile Game</h1>
                     <p class="lead mask mrg">
                         Engage young children's listening skills and have fun!
                     </p>
-                    <button class="btn mask"><a href="#intro">LEARN MORE</a></button>
-                </div>
-                <div class="col-md-4">
+                    <!-- <button class="btn mask"><a href="#intro">LEARN MORE</a></button> -->
                     <img class="img-fluid" src="mock1.png"/>
                 </div>
+
             </div>
         </div>
     </section>
@@ -182,10 +181,13 @@
         </div>
     </section>
     <section>
-        <div class="container" id="demo">
+        <div class="container" id="video">
             <div class="row justify-content-center">
                 <div class="col-md-9">
                     <h1 class="purple-mask">Sneak Peek</h1>
+                    <iframe width="800" height="500"
+                        src="https://www.youtube.com/embed/tn6rYcvIryI">
+                    </iframe>
                 </div>
             </div>
         </div>
